添加 Java API 并进行一些重构